--- a/about.html
+++ b/about.html
@@ -46,17 +46,20 @@
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu <i class="fa fa-bars"></i>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Amoha</a>
+            <a class="navbar-brand page-scroll" href="index.html">Amoha</a>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
+                    <!--<li class="nav-item">
                         <a class="nav-link page-scroll" href="#services">Services</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#portfolio">Our Works</a>
-                    </li>
+                    </li>-->
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link page-scroll" href="#timeline">Timeline</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="#team">Team</a>
@@ -89,9 +92,7 @@
                     <h3 class="section-subheading text-muted">Tag Line</h3>
                 </div>
             </div>
-            <div class="about-us-content">For nearly 30 years, Conservation International (CI) has been protecting nature for the benefit of all​.
-We know that human beings are totally dependent on nature — and that by saving nature, we’re saving ourselves. To that end, CI is helping to build a healthier, more prosperous and more productive planet.
-We do this through science, policy, and partnerships with countries, communities and companies. We employ more than 1,000 people and work with more than 2,000 partners in 30 countries. Over the years, CI has helped support 1,200 protected areas and interventions across 77 countries, safeguarding more than 601 million hectares of land, marine and coastal areas.</div>
+            <div class="about-content">Amoha is strongly committed to ensuring all students graduate from middle & high school and be college ready and fully prepared academically for any and all opportunities they choose to pursue.However, in high-poverty and under privileged communities there are external factors and obstacles students are faced with every day that can interfere with their ability to both get to school and be ready and able to learn. It's these students who need a bit of extra, individualized support. But there’s a gap between the kind of help they need and the support the schools are designed to provide. The result of this gap is a shockingly high dropout rate in these communities and when a student drops out of school, it not only affects him or her, it also has a lasting effect on our communities and society as a whole. Within these communities, dropouts are often highly concentrated, so we’re able to identify and target the specific schools that are in need of extra support. From there, we can start working to put students on the right path to graduation—which is where Amoha comes in.</div>
         </div>
     </section>
 
@@ -193,24 +194,87 @@ We do this through science, policy, and partnerships with countries, communities
         </div>
     </section>
 
-    <!-- About -->
-    <section id="about">
+    <!-- Timeline -->
+    <section id="timeline">
         <div class="container">
             <div class="row">
-                <div class="container">
-            <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Our Approach</h2>
-                    <h3 class="section-subheading text-muted">Tag Line</h3>
+                    <h2 class="section-heading">About</h2>
+                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
-            <div class="about-us-content">For nearly 30 years, Conservation International (CI) has been protecting nature for the benefit of all​.
-We know that human beings are totally dependent on nature — and that by saving nature, we’re saving ourselves. To that end, CI is helping to build a healthier, more prosperous and more productive planet.
-We do this through science, policy, and partnerships with countries, communities and companies. We employ more than 1,000 people and work with more than 2,000 partners in 30 countries. Over the years, CI has helped support 1,200 protected areas and interventions across 77 countries, safeguarding more than 601 million hectares of land, marine and coastal areas.</div>
-        </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="rounded-circle img-fluid" src="img/about/1.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>OCT-2016</h4>
+                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>NOV-2016</h4>
+                                    <h4 class="subheading">First School</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="rounded-circle img-fluid" src="img/about/3.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>DEC-2016</h4>
+                                    <h4 class="subheading">Second School</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="rounded-circle img-fluid" src="img/about/4.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4>JAN-2016</h4>
+                                    <h4 class="subheading">Third School</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Amoha
+                                    <br>is
+                                    <br>here</h4>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
+
 
     <!-- Team -->
     <section id="team" class="bg-faded">
