Added donate button
Out of place, need to move the button to somewhere else

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <!-- Bootstrap core CSS -->
     <link href="lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    
 
     <!-- Additional fonts for this theme -->
     <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -134,7 +135,7 @@
                     <h3 class="section-subheading text-muted">Tag Line</h3>
                 </div>
             </div>-->
-                    <div class="about-us-content text-center">We believe education has the power to help every child reach his or her potential. </div>
+                    <div class="about-us-content text-center"><i>We believe education has the power to help every child reach his or her potential</i></div>
                 </div>
             </div>
         </div>
@@ -246,7 +247,8 @@
                 <h3 class="h3--blue">Highlights from 2016</h3>
                 <div class="detailed-callout-box-content">
                     <p>Preserving nature and its benefits is an imperative, not a luxury. And through your support, we have
-                        thrived.</p>
+                        thrived.
+                    </p>
                     <a class="VWO_ProximaNovaBold" href="http://annualreport.conservation.org/index.html"><b>Read more...</b></a>
                 </div>
             </div>
@@ -292,6 +294,22 @@ We do this through science, policy, and partnerships with countries, communities
                     <p class="text-muted">Teacher Appointments</p>
                 </div>
             </div>
+        </div>
+        <div class="container donate">
+            <div class="row">
+                <div class="offset-lg-4 ">
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="500">
+                        <span class="input-group-btn">
+                            <button class="btn btn-danger" type="button">₹</button>
+                        </span>
+                        <span class="input-group-btn">
+                            <button class="btn btn-danger" type="button">Donate</button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+        </div>    
     </section>
 
 
