--- a/index.html
+++ b/index.html
@@ -296,20 +296,33 @@ We do this through science, policy, and partnerships with countries, communities
             </div>
         </div>
         <div class="container donate">
-            <div class="row">
-                <div class="offset-lg-4 ">
+           
+        </div>    
+    </section>
+    <section id="donate" class="bg-faded box-shadow">
+        <div class="row donate-heading">
+                        <div class="col-lg-12 text-center">
+                            <h2 class="section-heading">Donate Now</h2>
+                            <p class="text-muted">Some text here</p>
+                        </div>
+                    </div>
+        <div class="container">
+             <div class="row">
+                <div class="offset-lg-4 offset-xs-4 offset-sm-4 offset-md-4 ">
                     <div class="input-group">
-                        <input type="text" class="form-control" placeholder="500">
                         <span class="input-group-btn">
-                            <button class="btn btn-danger" type="button">₹</button>
+                            <button class="btn btn-transparent" type="button">₹</button>
                         </span>
+                        <input type="text" class="form-control" placeholder="500">
+                        
                         <span class="input-group-btn">
                             <button class="btn btn-danger" type="button">Donate</button>
                         </span>
                     </div>
                 </div>
             </div>
-        </div>    
+            </div>
+        </div>
     </section>
 
 
